src/main/metadata/objects/Duplicate_Merge_Info__c.object
<CustomObject>
    <fields>
        <fullName>Duplicate_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Duplicate Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Duplicate Merge Info (Duplicate Customer)</relationshipLabel>
        <relationshipName>Duplicate_Merge_Info1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duplicate_Reason__c</fullName>
        <label>Duplicate Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Duplicate_UCID__c</fullName>
        <label>Duplicate UCID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EP_Transaction_ID__c</fullName>
        <label>EP Transaction ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Duplicate Merge Info</relationshipLabel>
        <relationshipName>Duplicate_Merge_Info</relationshipName>
        <type>Lookup</type>
    </fields>	
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, 'AU') ,'AU', 
IF(ISPICKVAL($User.Market__c, 'CN'), 'CN', 
IF(ISPICKVAL($User.Market__c, 'JP'),'JP', IF(ISPICKVAL($User.Market__c, 'KR'), 'KR','NA'))))</defaultValue>
        <label>MD</label>
        <length>2</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Master_UCID__c</fullName>
        <label>Master UCID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
	<fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Duplicate Merge Info</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DMI-{00000000}</displayFormat>
        <label>Duplicate Merge Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Merge Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>